<resources>
    <string name="app_name">Proyecto</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="new_account">New Account</string>
    <string name="insert_team">Insert Team</string>
    <string name="partidos_jugados">Partidos jugados</string>
    <string name="partidos_ganados">Partidos ganados</string>
    <string name="partidos_empatados">Partidos empatados</string>
    <string name="partidos_perdidos">Partidos perdidos</string>
    <string name="diferencia_de_goles">Diferencia de goles</string>
    <string name="maximo_goleador">Máximo goleador</string>
    <string name="m_ximo_asistidor">Máximo asistidor</string>
    <string name="equipos_favoritos">Equipos Favoritos</string>
    <string name="insert_league_1">Insert league 1</string>
    <string name="insert_league_2">Insert league 2</string>
    <string name="ligas_favoritas">Ligas Favoritas</string>
    <string name="authorr">Author</string>
    <string name="titlee">Title</string>
    <string name="article_image">TODO</string>
    <string name="fc_barcelona">Fc Barcelona</string>
    <string name="liga_espa_ola">Liga Española</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="barcelona">Barcelona</string>
    <string name="real_madrid">Real Madrid</string>
    <string name="la_liga">La Liga</string>
    <string name="date">24 Diciembre</string>
    <string name="camp_nou">Camp Nou</string>
    <string name="liverpool">Liverpool</string>
    <string name="chelsea">Chelsea</string>
    <string name="premier_league">Premier League</string>
    <string name="anfield">Anfield</string>
    <string name="milan">Milan</string>
    <string name="juventus">Juventus</string>
    <string name="serie_a">Serie A</string>
    <string name="san_siro">San Siro</string>
    <string name="sevilla">Sevilla</string>
    <string name="betis">Betis</string>
    <string name="ramon_sanchez_pizjuan">Ramon Sanchez Pizjuan</string>
    <string name="arsenal">Arsenal</string>
    <string name="tottenham">Tottenham</string>
    <string name="emirates_stadium">Emirates Stadium</string>
    <string name="psg">PSG</string>
    <string name="monaco">Monaco</string>
    <string name="ligue_1">Ligue 1</string>
    <string name="parc_des_princes">Parc des Princes</string>
    <string name="man_city">Man. City</string>
    <string name="man_united">Man. United</string>
    <string name="etihad_stadium">Etihad Stadium</string>
    <string name="bayern_m">Bayern M.</string>
    <string name="b_dortmund">B. Dortmund</string>
    <string name="bundesliga">Bundesliga</string>
    <string name="allianz_arena">Allianz Arena</string>
</resources>